<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tan_background"
        tools:context="com.kalash.superschurken.DetailsActivity">

        <!-- Image -->
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-22dp"
            android:layout_marginEnd="-1dp"
            android:contentDescription="@string/schurke_image_desc"
            android:minHeight="350dp" />

        <!-- Name-Container -->
        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginStart="20dp"
            android:minHeight="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="@dimen/lebel_width"
                android:layout_height="wrap_content"
                android:labelFor="@+id/name_value"
                android:text="@string/name"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="name" />

            <TextView
                android:id="@+id/name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_value"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <!-- Alias-Container -->
        <LinearLayout
            android:id="@+id/alias_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_container"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/field_container_margin_top"
            android:minHeight="35dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/alias"
                android:layout_width="@dimen/lebel_width"
                android:layout_height="wrap_content"
                android:labelFor="@+id/alias_value"
                android:text="@string/alias"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="alias" />

            <TextView
                android:id="@+id/alias_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_value"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/alias" />

        </LinearLayout>

        <!-- Universum-Container -->
        <LinearLayout
            android:id="@+id/universum_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alias_container"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/field_container_margin_top"
            android:minHeight="35dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/universum"
                android:layout_width="@dimen/lebel_width"
                android:layout_height="wrap_content"
                android:labelFor="@+id/universum_value"
                android:text="@string/universe"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="universum" />

            <TextView
                android:id="@+id/universum_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_value"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/universum"
                app:layout_constraintTop_toBottomOf="parent" />

        </LinearLayout>

        <!-- Rolle-Container -->
        <LinearLayout
            android:id="@+id/rolle_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/universum_container"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/field_container_margin_top"
            android:minHeight="35dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/rolle"
                android:layout_width="@dimen/lebel_width"
                android:layout_height="wrap_content"
                android:labelFor="@+id/rolle_value"
                android:text="@string/role"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="rolle" />

            <TextView
                android:id="@+id/rolle_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_value"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rolle"
                app:layout_constraintTop_toBottomOf="parent" />

        </LinearLayout>

        <!-- Fähigkeiten-Container -->
        <LinearLayout
            android:id="@+id/faehigkeiten_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rolle_container"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/field_container_margin_top"
            android:minHeight="35dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/faehigkeiten"
                android:layout_width="@dimen/lebel_width"
                android:layout_height="wrap_content"
                android:labelFor="@+id/faehigkeiten_value"
                android:text="@string/capabilities"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="fähigkeiten/waffe" />

            <TextView
                android:id="@+id/faehigkeiten_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:breakStrategy="high_quality"
                android:text="@string/no_value"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/faehigkeiten"
                app:layout_constraintTop_toBottomOf="parent" />

        </LinearLayout>

        <!-- Hobby-Container -->
        <LinearLayout
            android:id="@+id/hobby_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/faehigkeiten_container"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/field_container_margin_top"
            android:minHeight="35dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/hobby"
                android:layout_width="@dimen/lebel_width"
                android:layout_height="wrap_content"
                android:labelFor="@+id/hobby_value"
                android:text="@string/hobby"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="hobby" />

            <TextView
                android:id="@+id/hobby_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:breakStrategy="high_quality"
                android:text="@string/no_value"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hobby"
                app:layout_constraintTop_toBottomOf="parent" />

        </LinearLayout>

        <!-- Status-Container -->
        <LinearLayout
            android:id="@+id/status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hobby_container"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/field_container_margin_top"
            android:minHeight="35dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/status"
                android:layout_width="@dimen/lebel_width"
                android:layout_height="wrap_content"
                android:labelFor="@+id/status_value"
                android:text="@string/status"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="status" />

            <TextView
                android:id="@+id/status_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_value"
                android:textAppearance="?android:textAppearanceListItemSmall"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/status"
                app:layout_constraintTop_toBottomOf="parent" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>